Refactorizar el codigo entero
Se ha cambiado el codigo entero y se ha agregado los botones no funcionales en la ventana de user, y con el JOptionPane se ha conseguido que funcione crear productos y listarlos en el array correctamente

--- a/Inventario/src/inventario/Ventana.form
+++ b/Inventario/src/inventario/Ventana.form
@@ -1,35 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="inventario.Ventana">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="816" height="696"/>
     </constraints>
     <properties>
-      <background color="-13332318"/>
+      <background color="-4718556"/>
     </properties>
     <border type="none"/>
     <children>
-      <vspacer id="62c19">
+      <component id="a30e7" class="javax.swing.JButton" binding="borrarProductoButton" default-binding="true">
         <constraints>
-          <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <component id="e9223" class="javax.swing.JButton" binding="myBoton">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Boton"/>
+          <text value="Borrar producto"/>
+        </properties>
+      </component>
+      <component id="9677f" class="javax.swing.JButton" binding="agregarProductosButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Agregar productos"/>
+        </properties>
+      </component>
+      <component id="e9223" class="javax.swing.JButton" binding="actualizarProducto">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Actualizar producto"/>
+        </properties>
+      </component>
+      <component id="ae0f1" class="javax.swing.JButton" binding="verTodosLosProductosButton" default-binding="true">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Ver todos los productos"/>
         </properties>
       </component>
       <component id="47eff" class="javax.swing.JLabel" binding="myLabel">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-4718556"/>
+          <font name="Liberation Mono" size="26" style="1"/>
+          <foreground color="-13322114"/>
           <text value="Inventario de Manuel"/>
         </properties>
+        <clientProperties>
+          <html.disable class="java.lang.Boolean" value="false"/>
+        </clientProperties>
       </component>
     </children>
   </grid>
